--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 ---
 layout: default
-title: The Official FreelanceInbox Blog
+title: FreelanceInbox Blog
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+	<div class="inset">
+		<div class="grid featured">
+			<h3>Featured posts</h1>
+			{% for post in site.posts %}
+			<a href="{{ post.url }}" class="card">
+				<div class="img-wrapper"><img src="{{ post.image }}"></div>
+				<h3>{{ post.title }}</h3>
+				<div class="content-wrapper">
+					<p class="date t-orange">{{ post.date | date_to_string }}</p>
+					<p class="summary">
+						{% if post.content contains '<!--more-->' %}
+						  {{ post.content | split:'<!--more-->' | first | strip_html }}
+						{% else %}
+						  {{ post.content | truncatewords:70 | strip_html }}
+						{% endif %} [...]
+					</p>
+				</div>
+			</a>
+			{% endfor %}
+			<div class="clearfix"></div>
+		</div>
+	</div>
 </div>
