Updated to match new branding

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: FreelanceInbox Blog
 <div id="home">
 	<div class="inset">
 		<div class="grid featured">
-			<h3>Featured posts</h1>
+			<h3 class="t-gray">Featured posts</h1>
 			{% for post in site.posts %}
 			<a href="{{ post.url }}" class="card">
 				<div class="img-wrapper"><img src="{{ post.image }}"></div>
